Rename class ACL to Acl::Node (#1631)
There is a name clash between Squid's ACL and
MS Windows' ACL (http://tinyurl.com/ns-winnt-acl).

--- a/src/acl/Makefile.am
+++ b/src/acl/Makefile.am
@@ -22,6 +22,7 @@ libapi_la_SOURCES = \
 	ChecklistFiller.h \
 	InnerNode.cc \
 	InnerNode.h \
+	Node.h \
 	Options.cc \
 	Options.h \
 	SplayInserter.h \
