Revert "move EventLoop to async/"
This reverts commit c7a705ed77ff74d6ef3ff444478cd69c370b85f4.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -225,6 +225,8 @@ squid_SOURCES = \
 	Downloader.h \
 	ETag.cc \
 	ETag.h \
+	EventLoop.cc \
+	EventLoop.h \
 	ExternalACL.h \
 	ExternalACLEntry.cc \
 	ExternalACLEntry.h \
@@ -1009,6 +1011,7 @@ tests_testRock_SOURCES = \
 	ConfigOption.cc \
 	ConfigParser.cc \
 	ETag.cc \
+	EventLoop.cc \
 	FadingCounter.cc \
 	FileMap.h \
 	tests/stub_HelperChildConfig.cc \
@@ -1176,6 +1179,7 @@ tests_testUfs_SOURCES = \
 	ConfigOption.cc \
 	ConfigParser.cc \
 	ETag.cc \
+	EventLoop.cc \
 	FadingCounter.cc \
 	FileMap.h \
 	tests/stub_HelperChildConfig.cc \
@@ -1348,6 +1352,7 @@ tests_testStore_SOURCES = \
 	ConfigOption.cc \
 	ConfigParser.cc \
 	ETag.cc \
+	EventLoop.cc \
 	FileMap.h \
 	tests/stub_HelperChildConfig.cc \
 	HttpBody.cc \
@@ -1509,6 +1514,7 @@ tests_testDiskIO_SOURCES = \
 	ConfigParser.cc \
 	tests/testDiskIO.cc \
 	tests/stub_ETag.cc \
+	EventLoop.cc \
 	FadingCounter.cc \
 	FileMap.h \
 	tests/stub_HelperChildConfig.cc \
@@ -2740,6 +2746,7 @@ check_PROGRAMS += tests/testEventLoop
 tests_testEventLoop_SOURCES = \
 	tests/testEventLoop.cc
 nodist_tests_testEventLoop_SOURCES = \
+	EventLoop.cc \
 	tests/stub_SBuf.cc \
 	tests/stub_debug.cc \
 	tests/stub_fatal.cc \
