--- a/src/async/Makefile.am
+++ b/src/async/Makefile.am
@@ -28,8 +28,7 @@ libasync_la_SOURCES = \
 	DelayedAsyncCalls.h \
 	Event.cc \
 	Event.h \
-	EventLoop.cc \
-	EventLoop.h \
+	forward.h \
 	JobWait.cc \
 	JobWait.h \
 	Subscription.h \
