--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -195,6 +195,8 @@ squid_SOURCES = \
 	$(WINSVC_SOURCE) \
 	AccessLogEntry.cc \
 	AccessLogEntry.h \
+	AsyncEngine.cc \
+	AsyncEngine.h \
 	AuthReg.h \
 	BodyPipe.cc \
 	BodyPipe.h \
