Fixed broken tests
After merge new tests became broken because some of them contained
duplicated lines in '*.instructions' files. This happened because the
uniqueness of these lines was previously ensured by adding a unique ACL
name to each of them. This is not possible now because we removed
AclMatchedName from parsing code).

I had to adjust ACLs to make debugging unique without ACL name addition.

--- a/test-suite/squidconf/bad-acl-dstdomain-dupe.conf
+++ b/test-suite/squidconf/bad-acl-dstdomain-dupe.conf
@@ -6,7 +6,7 @@
 ##
 
 acl test11 dstdomain .example.com example.com
-acl test12 dstdomain example.com .example.com
+acl test12 dstdomain example.org .example.org
 
 acl test21 dstdomain .example.com a.example.com
 acl test22 dstdomain b.example.com .example.com
