--- a/configure.ac
+++ b/configure.ac
@@ -191,7 +191,7 @@ AS_CASE(["$squid_host_os"],
     CXXFLAGS="$CXXFLAGS -mthreads -static-libgcc -static-libstdc++"
     dnl Check for Winsock only on MinGW
     SQUID_CHECK_WINSOCK_LIB
-    AC_CHECK_HEADERS([ws2tcpip.h winsock2.h windows.h],,,[
+    AC_CHECK_HEADERS([ws2tcpip.h winsock2.h windows.h io.h],,,[
 #if HAVE_WS2TCPIP_H
 #include <ws2tcpip.h>
 #endif
@@ -204,6 +204,7 @@ AS_CASE(["$squid_host_os"],
     ])
     MINGW_LIBS="-lmingwex"
     AC_SUBST(MINGW_LIBS)
+    AC_CHECK_FUNCS([fsync])
   ],
 
   [freebsd],[
