Remove unnecessary C linkage and unused code (#1677)
Also upgrade lib/util.c to C++.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -56,10 +56,9 @@ libmisccontainers_la_SOURCES = \
 libmiscutil_la_SOURCES = \
 	$(SNPRINTFSOURCE) \
 	Splay.cc \
-	getfullhostname.c \
 	heap.c \
 	radix.c \
-	util.c
+	util.cc
 
 TESTS += tests/testRFC1738
 
