--- a/src/auth/negotiate/kerberos/Makefile.am
+++ b/src/auth/negotiate/kerberos/Makefile.am
@@ -26,6 +26,7 @@ negotiate_kerberos_auth_LDADD= \
 	$(top_builddir)/lib/libmiscencoding.la \
 	$(COMPAT_LIB) \
 	$(LIBGSS_LIBS) \
+	$(LIBHEIMDAL_KRB5_LIBS) \
 	$(LIBNETTLE_LIBS) \
 	$(KRB5LIBS) \
 	$(XTRA_LIBS)
@@ -36,6 +37,7 @@ negotiate_kerberos_auth_test_LDADD= \
 	$(top_builddir)/lib/libmiscencoding.la \
 	$(COMPAT_LIB) \
 	$(LIBGSS_LIBS) \
+	$(LIBHEIMDAL_KRB5_LIBS) \
 	$(LIBNETTLE_LIBS) \
 	$(KRB5LIBS) \
 	$(XTRA_LIBS)
