--- a/src/acl/external/kerberos_ldap_group/Makefile.am
+++ b/src/acl/external/kerberos_ldap_group/Makefile.am
@@ -36,6 +36,7 @@ ext_kerberos_ldap_group_acl_LDFLAGS =
 ext_kerberos_ldap_group_acl_LDADD = \
 	$(top_builddir)/lib/libmiscencoding.la \
 	$(COMPAT_LIB) \
+	$(LIBGSS_LIBS) \
 	$(LIBLDAP_LIBS) \
 	$(LIBSASL) \
 	$(KRB5LIBS) \
