--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -2,7 +2,7 @@ name: Test build on MacOS
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "master", "github-macos" ]
   pull_request:
     branches: [ "master" ]
 
