--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -25,10 +25,10 @@ jobs:
         ./bootstrap.sh &&
         mkdir btbuild &&
         cd btbuild &&
-        PKG_CONFIG_PATH="/opt/homebrew/opt/openldap/lib/pkgconfig" \
+        export PKG_CONFIG_PATH="/opt/homebrew/opt/openldap/lib/pkgconfig" &&
         CFLAGS="-Wno-compound-token-split-by-macro " \
-        CPPFLAGS="$(pkg-config --cflags ldap)" \
-        LDFLAGS="$(pkg-config --ldflags ldap)" \
+        CPPFLAGS="`pkg-config --cflags ldap`" \
+        LDFLAGS="`pkg-config --libs ldap`" \
         ../configure
     - name: BuildIt!
       run: gmake -C btbuild -j $(nproc) all && gmake -C btbuild -j $(nproc) check
