squid-conf-tests: Ignore tests with mismatching autoconf macro (#1648)
The 'skip-unless-autoconf-defines' directive should be able to
distinguish autoconf macro values, such as '0' (not defined) from '1'
(defined) ones.  For example, --disable-ipv6 configuration option
defines USE_IPV6 as '0'. This change allows IPv6 tests activation,
addressing a TODO.

--- a/test-suite/squidconf/bad-acl-src-dupe.conf
+++ b/test-suite/squidconf/bad-acl-src-dupe.conf
@@ -18,8 +18,7 @@ acl test25 dst 127.0.0.0-127.0.0.128/32  127.0.0.128-127.1.0.255
 acl test36 dst 127.0.0.1-127.0.0.128  127.0.0.0-127.1.0.0/16
 acl test37 dst 127.1.0.0-127.2.0.0/16 127.1.0.1-127.1.0.128
 
-# TODO: make configurable depending on USE_IPV6
-# acl test41 src bad::1 bad::0-bad::f
-# acl test42 src dead::0-dead::0 dead::0
-# acl test43 src bad::0/64 bad::0/128
-# acl test44 src beef::0/16 beef:bad::/64
+acl test41 src bad::1 bad::0-bad::f
+acl test42 src dead::0-dead::0 dead::0
+acl test43 src bad::0/64 bad::0/128
+acl test44 src beef::0/16 beef:bad::/64
