--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -30,5 +30,5 @@ jobs:
         mkdir btbuild && \
         cd btbuild && \
         ../configure --without-ldap
-    # - name: BuildIt!
-    #   run: gmake -C btbuild -j $(nproc) all && gmake -C btbuild -j $(nproc) check
+    - name: BuildIt!
+      run: gmake -C btbuild -j $(nproc) all && gmake -C btbuild -j $(nproc) check
