--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -25,6 +25,7 @@ jobs:
       uses: actions/checkout@v4
     - name: Prepare build
       run: |
+        brew list openldap;
         export PKG_CONFIG_PATH="/opt/homebrew/opt/openldap/lib/pkgconfig";
         ls -l /opt/homebrew/opt/openldap/lib/pkgconfig;
         export CFLAGS="-Wno-compound-token-split-by-macro ";
