--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -22,8 +22,7 @@ jobs:
       uses: actions/checkout@v4
     - name: Prepare build
       run: |
-        brew list openldap ;
-        export PKG_CONFIG_PATH="`brew list openldap|grep ldap.pc | xargs dirname";
+        export PKG_CONFIG_PATH="`brew list openldap | grep ldap.pc | head -1 | xargs dirname`";
         export CFLAGS="-Wno-compound-token-split-by-macro ";
         export CPPFLAGS="`pkg-config --cflags ldap`";
         export LDFLAGS="`pkg-config --libs ldap`";
