--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -17,15 +17,15 @@ jobs:
         brew install \
           automake coreutils cppunit gawk \
           gnu-getopt gnu-sed grep \
-          make openldap
+          make openldap cyrus-sasl
     - name: Checkout sources
       uses: actions/checkout@v4
     - name: Prepare build
       run: |
-        export PKG_CONFIG_PATH="`brew list openldap | grep ldap.pc | head -1 | xargs dirname`";
+        export PKG_CONFIG_PATH=PKG_CONFIG_PATH="`brew list openldap | grep ldap.pc | head -1 | xargs dirname`:`brew list cyrus-sasl | grep libsasl2.pc | head -1 | xargs dirname`";
         export CFLAGS="-Wno-compound-token-split-by-macro ";
-        export CPPFLAGS="`pkg-config --cflags ldap`";
-        export LDFLAGS="`pkg-config --libs ldap`";
+        export CPPFLAGS="`pkg-config --cflags ldap libsasl2";
+        export LDFLAGS="`pkg-config --libs ldap libsasl2`";
         ./bootstrap.sh && \
         mkdir btbuild && \
         cd btbuild && \
